--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true
+    "esModuleInterop": true
   },
   "ts-node": {
     "swc": true,
