--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-	"scripts": {
-		"start": "ts-node index.ts",
-		"dev": "ts-node-dev --transpile-only index.ts"
-	},
-	"devDependencies": {
-		"@swc/core": "^1.3.24",
-		"@types/node": "^18.11.17",
-		"prettier": "^2.8.1",
-		"ts-node": "^10.9.1",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^4.9.4"
-	},
-	"dependencies": {
-		"@fastify/static": "^6.6.0",
-		"axios": "^1.2.1",
-		"fastify": "^4.10.2"
-	}
+  "scripts": {
+    "start": "ts-node index.ts",
+    "dev": "dotenv -- ts-node-dev --transpile-only index.ts"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.3.24",
+    "@types/node": "^18.11.17",
+    "dotenv-cli": "^6.0.0",
+    "prettier": "^2.8.1",
+    "ts-node-dev": "^2.0.0"
+  },
+  "dependencies": {
+    "@fastify/static": "^6.6.0",
+    "axios": "^1.2.1",
+    "fastify": "^4.10.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  }
 }
