--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "target": "esnext",
+    "moduleResolution": "node",
     "esModuleInterop": true
   },
   "ts-node": {
